tests/dataset/tpc-ds/compiler/java/q30.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq30732731274/001/Q30.java:251: error: cannot find symbol
        res5.add(x.wr_return_amt);
                  ^
  symbol:   variable wr_return_amt
  location: variable x of type WrDCa
/tmp/TestJavaCompiler_TPCDSQueriesq30732731274/001/Q30.java:296: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new CCustomerIdCFirstNameCLastNameCtrTotalReturn("C1", "John", "Doe", 150.000000))))) throw new AssertionError("expect failed");
                                                                                                                     ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
